infrastructure/base/networking/headscale/cloudflared-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared-headscale
  namespace: headscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared-headscale
  template:
    metadata:
      labels:
        app: cloudflared-headscale
    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:2025.4.0
          args:
            - tunnel
            - --config
            - /etc/cloudflared/config/config.yaml
            - --protocol
            - h2mux
            - run
          livenessProbe:
            httpGet:
              path: /ready
              port: 2000
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: config
              mountPath: /etc/cloudflared/config
              readOnly: true
            - name: creds
              mountPath: /etc/cloudflared/creds
              readOnly: true
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
      volumes:
        - name: config
          configMap:
            name: cloudflared-headscale-config
        - name: creds
          secret:
            secretName: cloudflared-credentials
