infrastructure/base/networking/headscale/service-derp.yaml
apiVersion: v1
kind: Service
metadata:
  name: derp-udp
  namespace: headscale
  annotations:
    lbipam.cilium.io/ips: "192.168.0.3"
spec:
  type: LoadBalancer
  selector:
    app: headscale
  ports:
    - name: stun
      port: 3478
      targetPort: 3478
      protocol: UDP
